# Document_RAG

./: .gitignore  ABOUTME.md  AI_NOTES.md  PROMPTS_USED.md  README.md  main.py  migrate_db.py  pyproject.toml  render.yaml  requirements.txt
app/: config.py  database.py  llm.py  main.py  vectorstore.py
app/routes/: ask.py  chat_history.py  documents.py  status.py  upload.py
app/services/: document_service.py  qa_service.py
static/: auth.css  script.js  style.css
templates/: index.html  login.html  status.html
